--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/Arthursouto099/LordOfRings#readme",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mysql2": "^3.14.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
